data structure header and source files

--- a/src/makefile
+++ b/src/makefile
@@ -1,8 +1,8 @@
 CC=clang
 CFLAGS=-Wall -Wextra -Werror -pedantic
 
-all: main.o intakethread.o procthread.o
-	$(CC) $(CFLAGS) main.o intakethread.o procthread.o -o ProjectVigilence
+all: main.o intakethread.o procthread.o ring_buffer.o
+	$(CC) $(CFLAGS) main.o intakethread.o procthread.o ring_buffer.o -o ProjectVigilence
 	make clean 
 	clear
 	./ProjectVigilence
@@ -17,7 +17,8 @@ intakethread.o: THREADS/DATA_INTAKE/dataIntakeThread.c
 procthread.o: THREADS/DATA_PROCESSING/dataProcessingThread.c
 	$(CC) $(CFLAGS) -pthread -c THREADS/DATA_PROCESSING/dataProcessingThread.c -o procthread.o
 
-
+ring_buffer.o: DATA_STRUCTURES/ring_buffer.c
+	$(CC) $(CFLAGS) -c DATA_STRUCTURES/ring_buffer.c -o ring_buffer.o
 
 clean:
 	rm -f *.o 
