--- a/src/makefile
+++ b/src/makefile
@@ -1,8 +1,8 @@
 CC=clang
 CFLAGS=-Wall -Wextra -Werror -pedantic
 
-all: main.o intakethread.o procthread.o ring_buffer.o
-	$(CC) $(CFLAGS) main.o intakethread.o procthread.o ring_buffer.o -o ProjectVigilence
+all: main.o intakethread.o procthread.o ring_buffer.o event_address_list.o
+	$(CC) $(CFLAGS) main.o intakethread.o procthread.o ring_buffer.o event_address_list.o -o ProjectVigilence
 	make clean 
 	clear
 	./ProjectVigilence
@@ -19,6 +19,9 @@ procthread.o: THREADS/DATA_PROCESSING/dataProcessingThread.c
 
 ring_buffer.o: DATA_STRUCTURES/ring_buffer.c
 	$(CC) $(CFLAGS) -c DATA_STRUCTURES/ring_buffer.c -o ring_buffer.o
+
+event_address_list.o: DATA_STRUCTURES/EVENT_RING_BUFFER/event_address_list.c
+	$(CC) $(CFLAGS) -c DATA_STRUCTURES/EVENT_RING_BUFFER/event_address_list.c -o event_address_list.o
 
 clean:
 	rm -f *.o 
