--- a/src/makefile
+++ b/src/makefile
@@ -1,8 +1,8 @@
 CC=clang
 CFLAGS=#-Wall -Wextra -Werror -pedantic
 
-all: main.o intakethread.o procthread.o ring_buffer.o event_address_list.o event_ring_buffer.o intake_ring_buffer.o mock_signal.o
-	$(CC) $(CFLAGS) main.o intakethread.o procthread.o ring_buffer.o event_address_list.o event_ring_buffer.o intake_ring_buffer.o mock_signal.o -lm -o ProjectVigilence
+all: main.o intakethread.o procthread.o ring_buffer.o event_address_list.o event_ring_buffer.o intake_ring_buffer.o mock_signal.o uart.o fake_openBCI.o
+	$(CC) $(CFLAGS) main.o intakethread.o procthread.o ring_buffer.o event_address_list.o event_ring_buffer.o intake_ring_buffer.o mock_signal.o uart.o fake_openBCI.o -lm -o ProjectVigilence
 	make clean 
 	clear
 	./ProjectVigilence
@@ -32,6 +32,11 @@ intake_ring_buffer.o: DATA_STRUCTURES/INTAKE_THREAD_BUFFER/intake_ring_buffer.c
 mock_signal.o: THREADS/DATA_INTAKE/mockSignal.c
 	$(CC) $(CFLAGS) -c THREADS/DATA_INTAKE/mockSignal.c -o mock_signal.o
 
+uart.o: UART/UART.c
+	$(CC) $(CFLAGS) -c UART/UART.c -o uart.o
+
+fake_openBCI.o: THREADS/FAKE_OPENBCI/fake_openBCI.c
+	$(CC) $(CFLAGS) -c THREADS/FAKE_OPENBCI/fake_openBCI.c -o fake_openBCI.o
 
 clean:
 	rm -f *.o 
